--- a/index.html
+++ b/index.html
@@ -60,32 +60,12 @@
 
 <h3>Synopsis</h3>
 <p style="margin-left: 0.5in;">
-<big> This course is a continuition from <a href="https://deeplearning-math.github.io/2018spring.html">Math 6380o, Spring 2018</a>, inspired by Stanford Stats 385, <a href="http://stats385.github.io">Theories of Deep Learning</a>, 
-	taught by Prof. Dave Donoho, Dr. Hatef Monajemi, and Dr. Vardan Papyan, as well as the IAS-HKUST workshop on 
-	<a href="http://ias.ust.hk/events/201801mdl/">Mathematics of Deep Learning</a> during Jan 8-12, 2018. 
-The aim of this course is to provide graduate students who are interested in deep learning a variety of mathematical and 
-	theoretical studies on neural networks that are currently available, in addition to some preliminary 
-	tutorials, to foster deeper understanding in future research. 
+<big> This course explores the basic concepts and underlying principles of artificial intelligence (AI), delving into the fundamentals of machine learning (ML), in the field of finance and trading. Participants will be exposed to the overarching principles, recent trends and developments, as well as applications of AI armed with insights from relevant FinTech case studies. Through a combination of lectures, discussions, and workshops, students will gain hands-on experience in applying AI and ML principles in understanding the financial markets, and devising solutions that potentially yield insights and intelligence for stock trading and related applications. With a focus on the conceptual understanding of the fundamentals of AI, the purpose of this course is two-fold: 1. To educate the next generation of innovators of the digital economy, especially in the financial sector; and 2. To equip FinTech leaders with the conceptual frameworks and analytical tools for the development and deployment of AI-enabled applications and technologies.
 	</big>
 <br>
 	<big>
-Prerequisite: There is no prerequisite, though mathematical maturity on approximation theory, harmonic analysis, optimization, and statistics will be helpful. 
-		it-yourself (DIY) and critical thinking (CT) are the most important things in this course. Enrolled students should have some programming experience with modern neural networks, such as PyTorch, Tensorflow, MXNet, Theano, and Keras, etc. 
-Otherwise, it is recommended to take some courses on Statistical Learning (<a href="https://yuany-pku.github.io/2018_math4432/">Math 4432</a> or 5470), and Deep learning such as 
-		<a href="https://cs231n.github.io/">Stanford CS231n</a> with assignments, or a similar course COMP4901J by Prof. CK TANG at HKUST.
+Prerequisite: Some preliminary course on (statistical) machine learning, applied statistics, and deep learning will be helpful.
 	</big>
-</p>
-
-<h3>Reference</h3>
-<p style="margin-left: 0.5in;">
-<big>
-<em><a href="http://stats385.github.io">Theories of Deep Learning</a>, Stanford STATS385 by Dave Donoho, Hatef Monajemi, and Vardan Papyan </em>
-</big>
-</p>
-<p style="margin-left: 0.5in;">
-<big>
-<em><a href="http://www.deepmath.org">On the Mathematical Theory of Deep Learning</a>, by <a href="http://www.math.tu-berlin.de/~kutyniok">Gitta Kutyniok</a> </em>
-</big>
 </p>
 
 
@@ -103,8 +83,7 @@ Otherwise, it is recommended to take some courses on Statistical Learning (<a hr
 
 <h3>Time and Place:</h3>
 <p style="margin-left: 0.5in;">
-<big><em>MonWed 4:30-5:50pm, Academic Bldg Rm 2463, Lift 25-26, HKUST</em> <br>
-	<em> Venue changed: Rm 4582 (Lift 27-28) from Sep 10, 2018.</em> <img src="./images/new.jpg" height="40"> 
+<big><em>MonWed 19:30-22:20, Academic Bldg Lecture Theatre (LTE), HKUST</em> <br>
 </big>
 </p>
 
@@ -118,7 +97,7 @@ Otherwise, it is recommended to take some courses on Statistical Learning (<a hr
 
 <p style="margin-left: 0.5in;">
 <big> <br>
-Email: Mr. Yifei Huang <em> deeplearning.math (add "AT gmail DOT com" afterwards) </em>
+Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em>
 </big>
 </p>
 				
