--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	</big>
 <br>
 	<big>
-Prerequisite: Some preliminary course on (statistical) machine learning, applied statistics, and deep learning will be helpful.
+		<b>Prerequisite</b>: Some preliminary course on (statistical) machine learning, applied statistics, and deep learning will be helpful.
 	</big>
 </p>
 
