--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
 
 <h3>Synopsis</h3>
 <p style="margin-left: 0.5in;">
-<big> This course explores the basic concepts and underlying principles of artificial intelligence (AI), delving into the fundamentals of machine learning (ML), in the field of finance and trading. Participants will be exposed to the overarching principles, recent trends and developments, as well as applications of AI armed with insights from relevant FinTech case studies. Through a combination of lectures, discussions, and workshops, students will gain hands-on experience in applying AI and ML principles in understanding the financial markets, and devising solutions that potentially yield insights and intelligence for stock trading and related applications. With a focus on the conceptual understanding of the fundamentals of AI, the purpose of this course is two-fold: 1. To educate the next generation of innovators of the digital economy, especially in the financial sector; and 2. To equip FinTech leaders with the conceptual frameworks and analytical tools for the development and deployment of AI-enabled applications and technologies.
+<big> This course explores the basic concepts and underlying principles of artificial intelligence (AI), delving into the fundamentals of machine learning (ML), 
+	in the field of finance and trading. Participants will be exposed to the overarching principles, recent trends and developments, as well as applications 
+	of AI armed with insights from relevant FinTech case studies. Through a combination of lectures, discussions, and workshops, students will gain hands-on 
+	experience in applying AI and ML principles in understanding the financial markets, and devising solutions that potentially yield insights and intelligence 
+	for stock trading and related applications. With a focus on the conceptual understanding of the fundamentals of AI, the purpose of this course is two-fold: 
+	<br>
+	<li> 1. To educate the next generation of innovators of the digital economy, especially in the financial sector; 
+	</li>> 
+	<li> 2. To equip FinTech leaders with the conceptual frameworks and analytical tools for the development and deployment of AI-enabled applications and technologies.
+	</li>
 	</big>
 <br>
 	<big>
