--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <h3>Instructors: </h3>
 <p style="margin-left: 0.5in;">
 <big>
-<em><a href="./Resume-Anthony_Woo_2010_01_21.pdf">Anthony Woo</a>  </em>
+<em><a href="https://github.com/aifin-hkust/aifin-hkust.github.io/Resume-Anthony_Woo_2010_01_21.pdf">Anthony Woo</a>  </em>
 </big>
 		
 <p style="margin-left: 0.5in;">
