--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 <p style="margin-left: 0.5in;">
 <big><em>Friday 19:30-22:20, Academic Bldg Lecture Theatre (LTE), HKUST</em> <br>
 </big>
+This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates and myself. 
+	Rather than emailing questions to the teaching staff, I encourage you to post your questions on Piazza. If you have any problems or feedback for the developers, email team@piazza.com. <br>
+<big><em>Find our class page at: <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/home">https://piazza.com/ust.hk/spring2019/mafs6010u/home</a></em></big> <br>
 </p>
 
 <h3>Homework and Projects:</h3>
@@ -111,6 +114,8 @@
 Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em>
 </big>
 </p>
+	
+	
 				
 <h3>Schedule</h3>
 
