--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 <td>09/03/2018, Mon</td>
 <td>Lecture 01: Overview
 </td>
-<td>Y.Y.</td>
+<td>A.W. and Y.Y.</td>
 <td></td>
 </tr>
 
