--- a/index.html
+++ b/index.html
@@ -60,14 +60,12 @@
 
 <h3>Synopsis</h3>
 <p style="margin-left: 0.5in;">
-<big> This course explores the basic concepts and underlying principles of artificial intelligence (AI), delving into the fundamentals of machine learning (ML), 
-	in the field of finance and trading. Participants will be exposed to the overarching principles, recent trends and developments, as well as applications 
-	of AI armed with insights from relevant FinTech case studies. Through a combination of lectures, discussions, and workshops, students will gain hands-on 
-	experience in applying AI and ML principles in understanding the financial markets, and devising solutions that potentially yield insights and intelligence 
-	for stock trading and related applications. With a focus on the conceptual understanding of the fundamentals of AI, the purpose of this course is two-fold: 
+<big> This course explores the basic concepts and underlying principles of artificial intelligence (AI), delving into the fundamentals of machine learning with insights from case studies of relevant technologies. 
+	Allowing for the experimentation of applications of machine learning, this course is designed to encourage students to devise creative ways to put readily-available AI technologies to use to tackle problems 
+	in real life. With a focus on the conceptual understanding of the fundamentals of AI, the purpose of this course is two-fold:
 	<br>
 	<ul>
-	<li> 1. To educate the next generation of innovators of the digital economy, especially in the financial sector; 
+	<li> 1. To educate the next generation of innovators of the digital economy, especially in the financial sector;
 	</li>
 	<li> 2. To equip FinTech leaders with the conceptual frameworks and analytical tools for the development and deployment of AI-enabled applications and technologies.
 	</li>
@@ -104,7 +102,7 @@ This term we will be using Piazza for class discussion. The system is highly cat
 <h3>Homework and Projects:</h3>
 
 <p style="margin-left: 0.5in;">
-<big><em> No exams, but extensive discussions and projects will be expected. </em>
+<big><em> TBA (To Be Announced) </em>
 </big></p>
 
 <h3>Teaching Assistant:</h3>
