--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 
 <tr>
 <td>09/03/2018, Mon</td>
-<td>Lecture 01: Overview
+<td>Lecture 01: History and Overview of Artificial Intelligence.
 </td>
 <td>A.W. and Y.Y.</td>
 <td></td>
