--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <h3>Instructors: </h3>
 <p style="margin-left: 0.5in;">
 <big>
-<em><a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/Resume-Anthony_Woo_2019_01_21.pdf">Anthony Woo</a>  </em>
+<em><a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/Resume-Anthony_Woo_2019_01_21.pdf">Anthony Woo</a> [<a href="https://www.dropbox.com/s/mv761isufswff0m/Resume%20-%20Anthony%20Woo.pdf?dl=0"> Resume </a>] </em>
 </big>
 		
 <p style="margin-left: 0.5in;">
