--- a/index.html
+++ b/index.html
@@ -128,30 +128,24 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 </tr>
 
 <tr>
-<td>09/03/2018, Mon</td>
-<td>Lecture 01: History and Overview of Artificial Intelligence.
+<td>01/02/2019, Fri</td>
+<td>Lecture 01: History and Overview of Artificial Intelligence. [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.01.pdf"> slides </a>]
 </td>
 <td>A.W. and Y.Y.</td>
 <td></td>
 </tr>
 
-	<!---	
+		
 <tr>
-<td>09/05/2018, Wed</td>
-<td>Lecture 02: Overview II <a href="https://github.com/deeplearning-math/slides/blob/master/Lecture02_overview_ii.pdf">[ slides ]</a>
-	<br>
-	<ul>[Reference]:
-	<li> Stephane Mallat, <a href="https://arxiv.org/abs/1601.04920">Understanding Deep Convolutional Networks</a>, Philosophical Transactions A, 2016. </li>
-	<li> Stephane Mallat, <a href="https://www.di.ens.fr/~mallat/papiers/ScatCPAM.pdf">Group Invariant Scattering</a>, Communications on Pure and Applied Mathematics, Vol. LXV, 1331–1398 (2012) </li>
-	<li> Stephane Mallat's short course on Mathematical Mysteries of Deep Neural Networks: <a href="https://www.youtube.com/watch?v=0wRItoujFTA">[ Part I video ]</a>, <a href="https://www.youtube.com/watch?v=kZkjb52zh5k">[ Part II video ]</a>, <a href="http://learning.mpi-sws.org/mlss2016/slides/CadixCours2016.pdf"> [ slides ] </a> 
-	</ul>
+<td>15/02/2018, Fri</td>
+<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ slides ]</a>
 </td>
 <td>Y.Y.</td>
 <td></td>
 </tr>
 
 		
-
+<!---
 <tr>
 <td>09/10/2018, Mon</td>
 <td>Lecture 03: Overview III <a href="https://github.com/deeplearning-math/slides/blob/master/Lecture03_overview_iii.pdf">[ slides ]</a>
