--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 		
 <tr>
 <td>15/02/2018, Fri</td>
-<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ slides ]</a>
+<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ YY's slides ]</a>
 </td>
 <td>Y.Y.</td>
 <td></td>
