--- a/index.html
+++ b/index.html
@@ -138,34 +138,29 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 		
 <tr>
 <td>15/02/2018, Fri</td>
-<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ YY's slides ]</a>
+<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ YY's slides ] [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.15.pdf"> AW's slides </a>]</a>
 </td>
 <td>Y.Y.</td>
 <td></td>
 </tr>
 
 		
-<!---
+
 <tr>
 <td>09/10/2018, Mon</td>
-<td>Lecture 03: Overview III <a href="https://github.com/deeplearning-math/slides/blob/master/Lecture03_overview_iii.pdf">[ slides ]</a>
+<td>Lecture 03: Regression, Classification, Model Assessment and Selection <a href="slides/Lecture03_mafs6010u.pdf">[ YY's slides ]</a> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.22.pdf"> AW's slides </a>]
 	<br>
 	<ul>[Reference]:
-	<li> Chiyuan Zhang, Samy Bengio, Moritz Hardt, Benjamin Recht, Oriol Vinyals,
-		<a href="https://arxiv.org/abs/1611.03530">Understanding deep learning requires rethinking generalization.
-		</a> ICLR 2017. 
-		<a href="https://github.com/pluskid/fitting-random-labels">[Chiyuan Zhang's codes]</a> 
+	<li> 
 	</li>
-	<li> Peter L. Bartlett, Dylan J. Foster, Matus Telgarsky. Spectrally-normalized margin bounds for neural networks. 
- <a href="https://arxiv.org/abs/1706.08498">[ arXiv:1706.08498 ]</a>. NIPS 2017. </li>
-	<li> Daniel Soudry, Elad Hoffer, Mor Shpigel Nacson, Suriya Gunasekar, Nathan Srebro. The Implicit Bias of Gradient Descent on Separable Data. <a href="https://arxiv.org/abs/1710.10345">[ arXiv:1710.10345 ]</a>. ICLR 2018. </li>
-	<li> Matus Telgarsky. Margins, Shrinkage, and Boosting. <a href="https://arxiv.org/abs/1303.4172">[ arXiv:1303.4172 ]</a>. ICML 2013. </li>
+	<li> </li>
 	</ul>
 </td>
 <td>Y.Y.</td>
 <td></td>
 </tr>
-	
+
+	<!---
 	<tr>
 <td>09/12/2018, Wed</td>
 <td>Lecture 04: Overview IV <a href="https://github.com/deeplearning-math/slides/blob/master/Lecture04_overview_iv.pdf">[ slides ]</a> and Project 1 <a href="https://github.com/deeplearning-math/slides/blob/master/project1.pdf">[ project1.pdf ]</a> 
