--- a/index.html
+++ b/index.html
@@ -98,6 +98,72 @@
 	Rather than emailing questions to the teaching staff, I encourage you to post your questions on Piazza. If you have any problems or feedback for the developers, email team@piazza.com. <br>
 Find our class page at: <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/home">https://piazza.com/ust.hk/spring2019/mafs6010u/home</a></em></big> <br>
 </p>
+	
+<h3>Reference (&#21442;&#32771;&#25945;&#26448;)</h3>
+
+	
+
+	<p style="margin-left: 0.5in;">
+
+	<big>
+
+		<em> <a href="http://www-bcf.usc.edu/~gareth/ISL/">An Introduction to Statistical Learning, with applications in R (ISLR).</a> By James, Witten, Hastie, and Tibshirani </em>
+
+	</big>
+
+	</p>
+
+	
+
+	<p style="margin-left: 0.5in;">
+
+	<big>
+
+		<em> <a href="https://github.com/JWarmenhoven/ISLR-python/">ISLR-python, By Jordi Warmenhoven</a>. </em>
+
+	</big>
+
+	</p>
+
+	
+
+	<p style="margin-left: 0.5in;">
+
+	<big>
+
+		<em> <a href="https://github.com/mscaudill/IntroStatLearn">ISLR-Python: Labs and Applied, by Matt Caudill</a>. </em>
+
+	</big>
+
+	</p>
+
+	
+
+
+
+
+<p style="margin-left: 0.5in;">
+
+<big>
+
+<em> <a href="http://www-stat.stanford.edu/~hastie/ElemStatLearn/">The Elements of Statistical Learning (ESL).</a> 2nd Ed. By Hastie, Tibshirani, and Friedman </em>
+
+</big>
+
+</p>
+
+	
+
+	<p style="margin-left: 0.5in;">
+
+	<big>
+
+	<em> <a href="https://github.com/sujitpal/statlearning-notebooks">statlearning-notebooks</a>, by Sujit Pal, Python implementations of the R labs for the <a href="https://lagunita.stanford.edu/courses/HumanitiesScience/StatLearning/Winter2014/about">StatLearning: Statistical Learning</a> online course from Stanford taught by Profs Trevor Hastie and Rob Tibshirani.</em>
+
+	</big>
+
+	</p>
+
 
 <h3>Homework and Projects:</h3>
 
@@ -151,9 +217,8 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 <td>Lecture 03: Regression, Classification, Model Assessment and Selection <a href="slides/Lecture03_mafs6010u.pdf">[ YY's slides ]</a> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.22.pdf"> AW's slides </a>]
 	<br>
 	<ul>[Reference]:
-	<li> 
+		<li> <a href="http://www-bcf.usc.edu/~gareth/ISL/"> ISLR, Chapter 3-6. </a>
 	</li>
-	<li> </li>
 	</ul>
 </td>
 <td>Y.Y.</td>
