--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@ Find our class page at: <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/
 <p style="margin-left: 0.5in;">
 <big> <br>
 Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em>
+	<br>
+	<em> <a href=" https://www.linkedin.com/in/katrinafong/">Ms. Katrina</a> </em>
 </big>
 </p>
 	
@@ -213,8 +215,21 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 		
 
 <tr>
-<td>09/10/2018, Mon</td>
+<td>02/22/2019, Fri</td>
 <td>Lecture 03: Regression, Classification, Model Assessment and Selection <a href="slides/Lecture03_mafs6010u.pdf">[ YY's slides ]</a> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.22.pdf"> AW's slides </a>]
+	<br>
+	<ul>[Reference]:
+		<li> <a href="http://www-bcf.usc.edu/~gareth/ISL/"> ISLR, Chapter 3-6. </a>
+	</li>
+	</ul>
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+	
+<tr>
+<td>03/1/2019, Fri</td>
+<td>Lecture 04: Decision Tree, Random Forests and Boosting <a href="slides/Lecture04_mafs6010u.pdf">[ YY's slides ]</a> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.01.pdf"> AW's slides </a>]
 	<br>
 	<ul>[Reference]:
 		<li> <a href="http://www-bcf.usc.edu/~gareth/ISL/"> ISLR, Chapter 3-6. </a>
