--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 <td>03/15/2019, Fri</td>
 <td>Lecture 06. 
 	<br>
-	<ul>[ Invited Talk ]: Fintech and Blockchain
-		<li> Speaker: Dr. Alex YANG, CEO, VEE Technology LLC
+	<ul>[ Invited Talk ]: <B> Fintech and Blockchain </B>
+		<li> <B>Speaker</B>: <a href="slides/Alex_YANG.pdf">Dr. Alex YANG</a>, CEO, VEE Technology LLC
 	</li>
-		<li> Abstract: This is a brief introduction of Blockchain consensus and its current application in Finance, <a href="https://v.systems">V.Systems</a>’ 
+		<li> <B>Abstract</B>: This is a brief introduction of Blockchain consensus and its current application in Finance, <a href="https://v.systems">V.Systems</a>’ 
 			vision and outlook of Blockchain in Fintech.</li>
-		<li> Bio: Dr Alex Yang is a FinTech entrepreneur/investor with over 14 years of experience in banking and finance. VEE Technology is led by Sunny King, a blockchain legendary developer and creator of Proof-of-Stake consensus. As CEO of VEE Tech, Alex is driving the project to solve the core scalability and stability problems in the development of the blockchain industry. His deep experience of the industry has been gained through his investing activity where he has sponsored many world-leading blockchain foundations.
+		<li> <B>Bio</B>: Dr Alex Yang is a FinTech entrepreneur/investor with over 14 years of experience in banking and finance. VEE Technology is led by Sunny King, a blockchain legendary developer and creator of Proof-of-Stake consensus. As CEO of VEE Tech, Alex is driving the project to solve the core scalability and stability problems in the development of the blockchain industry. His deep experience of the industry has been gained through his investing activity where he has sponsored many world-leading blockchain foundations.
 <br>
 Prior to his role at VEE, Alex was the founder and CEO of Fund V, one of the first token funds to focus on blockchain companies and related investment opportunities. He was also the founding partner of Beam VC and CyberCarrier Capital which together have successfully invested in over 30 startups in the TMT sector.  Alex is a founding partner of Protoss Global Opportunity Fund, a fixed income hedge fund based in Hong Kong.  
 <br>
