--- a/index.html
+++ b/index.html
@@ -242,11 +242,12 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 
 <tr>
 <td>03/8/2019, Fri</td>
-<td>Lecture 05: Tutorial 
+<td>Lecture 05: Tutorials 
 	<br>
 	<ul>[Reference]:
-		<li> <a href="http://www-bcf.usc.edu/~gareth/ISL/"> ISLR, Chapter 3-6. </a>
-	</li>
+		<li> Yifei HUANG: <a href="slides/Tutorial1MAFS6010U.ipynb"> Tutorial on Machine Learning by Python </a> </li>
+		<li> Yifei HUANG: <a href="slides/Tutorial_for_Server.pdf"> Tutorial on GPU server </a> </li>
+		<li> A dataset used in python tutorial: <a href="okex_future_BTC_USD_this_week_1H.csv"> okex_future_BTC_USD_this_week_1H.csv </a> </li>
 	</ul>
 </td>
 <td>Yifei Huang <br> Katrina<br> Anthony Woo</td>
