--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 		<li> Yifei HUANG: <a href="slides/Tutorial1MAFS6010U.ipynb"> Tutorial on Machine Learning by Python </a> </li>
 		<li> Yifei HUANG: <a href="slides/Tutorial_for_Server.pdf"> Tutorial on GPU server </a> </li>
 		<li> A dataset used in python tutorial: <a href="okex_future_BTC_USD_this_week_1H.csv"> okex_future_BTC_USD_this_week_1H.csv </a> </li>
-		<li> <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/resources">File links in Piazza></a></li>
+		<li> <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/resources">File links in Piazza >> </a></li>
 	</ul>
 </td>
 <td>Yifei Huang <br> Katrina<br> Anthony Woo</td>
