--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Find our class page at: <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/
 <big> <br>
 Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em>
 	<br>
-	<em> <a href=" https://www.linkedin.com/in/katrinafong/">Ms. Katrina</a> </em>
+	<em> <a href=" https://www.linkedin.com/in/katrinafong/">Ms. Katrina Fong</a> </em>
 </big>
 </p>
 	
@@ -251,7 +251,7 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 		<li> <a href="https://piazza.com/ust.hk/spring2019/mafs6010u/resources">File links in Piazza >> </a></li>
 	</ul>
 </td>
-<td>Yifei Huang <br> Katrina<br> Anthony Woo</td>
+<td>Yifei Huang; <br> Katrina Fong;<br> Anthony Woo</td>
 <td></td>
 </tr>
 	
