--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 	
 <tr>
 <td>03/15/2019, Fri</td>
-<td>Lecture 06. 
+<td>Lecture 06. Topics in Blockchains
 	<br>
 	<ul>[ Invited Talk ]: <B> Fintech and Blockchain </B>
-		<li> <B>Speaker</B>: <a href="slides/Alex_YANG.pdf">Dr. Alex YANG</a>, CEO, VEE Technology LLC
+		<li> <B>Speaker</B>: <a href="slides/Alex_YANG.pdf">Dr. Alex YANG</a>, CEO, VEE Technology LLC and Dr. Chen NING.
 	</li>
 		<li> <B>Abstract</B>: This is a brief introduction of Blockchain consensus and its current application in Finance, <a href="https://v.systems">V.Systems</a>’ 
 			vision and outlook of Blockchain in Fintech.</li>
@@ -272,6 +272,8 @@ Prior to moving into venture capital investing, Alex was based in Hong Kong as h
 <br>
 Alex has a PhD from Northwestern University and a BA in Mathematics from Peking University. 
 		</li>
+	</ul>
+	<ul>An Introduction to Blockchains: [ <a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.15.pdf"> AW's slides </a>]
 	</ul>
 </td>
 <td>Y.Y.</td>
