--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Prior to moving into venture capital investing, Alex was based in Hong Kong as h
 Alex has a PhD from Northwestern University and a BA in Mathematics from Peking University. 
 		</li>
 	</ul>
-	<ul>An Introduction to Blockchains: [ <a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.15.pdf"> AW's slides </a>]
+	<ul><B> An Introduction to Blockchains</B>: [ <a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.15.pdf"> AW's slides </a>]
 	</ul>
 </td>
 <td>Y.Y.</td>
