--- a/index.html
+++ b/index.html
@@ -280,29 +280,16 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td></td>
 </tr>
 
-	<!---
-	<tr>
 <td>09/12/2018, Wed</td>
-<td>Lecture 04: Overview IV <a href="https://github.com/deeplearning-math/slides/blob/master/Lecture04_overview_iv.pdf">[ slides ]</a> and Project 1 <a href="https://github.com/deeplearning-math/slides/blob/master/project1.pdf">[ project1.pdf ]</a> 
+<td>Lecture 07: An Introduction to Neural Networks and Deep Learning <a href="slides/Lecture05.pdf">[ slides ]</a>  
 	<br>
-	<ul>[Reference]:
-	<li> Freeman, Bruna. Topology and Geometry of Half-Rectified Network Optimization, ICLR 2017. <a href="https://arxiv.org/abs/1611.01540">[ arXiv:1611.01540 ]</a> 
-		</li>	
-	<li> Luca Venturi, Afonso Bandeira, and Joan Bruna. Neural Networks with Finite Intrinsic Dimension Have no Spurious Valleys. <a href="https://arxiv.org/abs/1802.06384">[ arXiv:1802.06384 ]</a>
-	</li>
-	<li> Stephane Mallat, <a href="https://www.di.ens.fr/~mallat/papiers/ScatCPAM.pdf">Group Invariant Scattering</a>, Communications on Pure and Applied Mathematics, Vol. LXV, 1331–1398 (2012) </li>
-	<li> Joan Bruna and Stephane Mallat, <a href="http://www.cmapx.polytechnique.fr/~bruna/Publications_files/pami.pdf">Invariant Scattering Convolution Networks</a>, IEEE Transactions on Pattern Analysis and Machine Intelligence, 2012 </li>
-	<li> Haixia Liu, Raymond Chan, and Yuan Yao, <a href="http://www.sciencedirect.com/science/article/pii/S1063520315001566">Geometric Tight Frame based Stylometry for Art Authentication of van Gogh Paintings</a>, Applied and Computational Harmonic Analysis, 41(2): 590-602, 2016. </li>
-	<li> Roberto Leonarduzzi, Haixia Liu, and Yang Wang, <a href="https://www.sciencedirect.com/science/article/pii/S0165168418301105">Scattering transform and sparse linear classifiers for art authentication</a>. Signal Processing 150: 11-19, 2018. </li>
-	</ul>
-	<ul> [Matlab codes]:
-		<li> <a href="http://www.di.ens.fr/data/software/"> Scattering Net codes </a> </li>
-		<li> <a href="https://github.com/deeplearning-math/slides/blob/master/tutorial_scatnet_gu.m"> A tutorial on ScatNet Matlab package </a> </li>
-	</ul>	
 </td>
-<td>GU, Hanlin<br> Y.Y.</td>
+<td>Y.Y.</td>
 <td></td>
 </tr>
+	<!---
+	<tr>
+
 
 	<tr>
 <td>09/19/2018, Wed</td>
