--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 <td>15/02/2018, Fri</td>
 <td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ YY's slides ] [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.15.pdf"> AW's slides </a>]</a>
 </td>
-<td>Y.Y.</td>
+<td>A.W. <br> Y.Y.</td>
 <td></td>
 </tr>
 
@@ -332,7 +332,7 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 	<ul><B> An Introduction to Blockchains</B>: [ <a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.15.pdf"> AW's slides </a>]
 	</ul>
 </td>
-<td>Y.Y.</td>
+<td>A.W. <br> Y.Y.</td>
 <td></td>
 </tr>
 
@@ -344,7 +344,18 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 		<li> [<a href="slides/Lecture05_DeepLearning-B.pdf"> slides-B </a>] </li>
 	</ul>
 </td>
-<td>Y.Y.</td>
+<td>A.W. <br>Y.Y.</td>
+<td></td>
+</tr>
+
+<td>03/29/2019, Fri</td>
+<td>Lecture 08: An Introduction to Recurrent Neural Networks (RNN) and Long Short Term Memory (LSTM) </a>  
+	<br>
+	<ul>[Reference]:
+		<li> [<a href="slides/Lecture06_RNN-LSTM.pdf"> slides </a>] </li>
+	</ul>
+</td>
+<td>A.W. <br> Y.Y.</td>
 <td></td>
 </tr>
 	<!---
