--- a/index.html
+++ b/index.html
@@ -358,6 +358,39 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td>A.W. <br> Y.Y.</td>
 <td></td>
 </tr>
+
+<td>04/12/2019, Fri</td>
+<td>Lecture 09: An Introduction to Unsupervised Learning: PCA, AutoEncoder, VAE, and GANs </a>  
+	<br>
+	<ul>[Reference]:
+		<li> [<a href="slides/"> slides </a>] </li>
+	</ul>
+</td>
+<td>A.W. <br> Y.Y.</td>
+<td></td>
+</tr>
+
+<td>04/26/2019, Fri</td>
+<td>Lecture 10: An Introduction to Reinforcement Learning </a>  
+	<br>
+	<ul>[Reference]:
+		<li> [<a href="slides/"> slides </a>] </li>
+	</ul>
+</td>
+<td>A.W. <br> Y.Y.</td>
+<td></td>
+</tr>
+
+<td>05/03/2019, Fri</td>
+<td>Lecture 11: Tutorial on deep learning in Python </a>  
+	<br>
+	<ul>[Reference]:
+		<li> [<a href="slides/"> slides </a>] </li>
+	</ul>
+</td>
+<td>Yifei Huang</td>
+<td></td>
+</tr>
 	<!---
 	<tr>
 
