--- a/index.html
+++ b/index.html
@@ -351,6 +351,10 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td>03/29/2019, Fri</td>
 <td>Lecture 08: An Introduction to Recurrent Neural Networks (RNN) and Long Short Term Memory (LSTM) </a>  
 	<br>
+	<ul>[ Invited Talk ]
+		<li> Speaker: <a href="slides/Dr%Jeffrey%Hui%-%Profile%-%English%-%2019-04.pdf"> Dr. Jeffrey Hui </a>
+		<li> Title: Igniting the i-Marketing Revolution - 5 KEY Digital and Social Media Trends in 2019+ [<a href="slides/Top%i-Marketing%Trends-Jeffrey-2019%(V2)-HKUST-OP.pdf"> slides </a>]
+	</ul>
 	<ul>[Reference]:
 		<li> [<a href="slides/Lecture06_RNN-LSTM.pdf"> slides </a>] </li>
 	</ul>
