--- a/index.html
+++ b/index.html
@@ -262,7 +262,10 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 		
 <tr>
 <td>15/02/2018, Fri</td>
-<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ YY's slides ] [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.15.pdf"> AW's slides </a>]</a>
+<td>Lecture 02: Introduction to Supervised Learning <a href="slides/Lecture02.pdf">[ YY's slides ]</a>
+	<ul>[ Topic ]
+		<li>Google Experiments: Vision Sensing and Case study: HireVue (Video Analytics for Recruitment)[<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.15.pdf"> AW's slides </a>]</li>
+	</ul>
 </td>
 <td>A.W. <br> Y.Y.</td>
 <td></td>
@@ -272,11 +275,15 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 
 <tr>
 <td>02/22/2019, Fri</td>
-<td>Lecture 03: Regression, Classification, Model Assessment and Selection <a href="slides/Lecture03_mafs6010u.pdf">[ YY's slides ]</a> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.22.pdf"> AW's slides </a>]
+<td>Lecture 03: Regression, Classification, Model Assessment and Selection <a href="slides/Lecture03_mafs6010u.pdf">[ YY's slides ]</a> 
 	<br>
 	<ul>[Reference]:
 		<li> <a href="http://www-bcf.usc.edu/~gareth/ISL/"> ISLR, Chapter 3-6. </a>
 	</li>
+	</ul>
+	<ul>[ Topic ]:
+		<li> Katrina Fong's talk [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.02.22.pdf"> AW's slides </a>]
+		</li>
 	</ul>
 </td>
 <td>Y.Y.</td>
@@ -285,11 +292,14 @@ Email: Mr. Yifei Huang <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em
 	
 <tr>
 <td>03/1/2019, Fri</td>
-<td>Lecture 04: Decision Tree, Random Forests and Boosting <a href="slides/Lecture04_mafs6010u.pdf">[ YY's slides ]</a> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.01.pdf"> AW's slides </a>]
+<td>Lecture 04: Decision Tree, Random Forests and Boosting <a href="slides/Lecture04_mafs6010u.pdf">[ YY's slides ]</a> 
 	<br>
 	<ul>[Reference]:
 		<li> <a href="http://www-bcf.usc.edu/~gareth/ISL/"> ISLR, Chapter 3-6. </a>
 	</li>
+	</ul>
+	<ul>[ Topic ] 
+		<li> Credit analysis and Mock interview by Katrina [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.03.01.pdf"> AW's slides </a>]</li>
 	</ul>
 </td>
 <td>Y.Y.</td>
@@ -343,6 +353,10 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 		<li> [<a href="slides/Lecture05_DeepLearning-A.pdf"> slides-A </a>] </li>
 		<li> [<a href="slides/Lecture05_DeepLearning-B.pdf"> slides-B </a>] </li>
 	</ul>
+	<ul>[ Invited Talk ]
+		<li> Speaker: <a href="slides/Dr%Jeffrey%Hui%-%Profile%-%English%-%2019-04.pdf"> Dr. Jeffrey Hui </a>
+		<li> Title: Igniting the i-Marketing Revolution - 5 KEY Digital and Social Media Trends in 2019+ [<a href="slides/Top%i-Marketing%Trends-Jeffrey-2019%(V2)-HKUST-OP.pdf"> slides </a>]
+	</ul>	
 </td>
 <td>A.W. <br>Y.Y.</td>
 <td></td>
@@ -351,12 +365,11 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td>03/29/2019, Fri</td>
 <td>Lecture 08: An Introduction to Recurrent Neural Networks (RNN) and Long Short Term Memory (LSTM) </a>  
 	<br>
-	<ul>[ Invited Talk ]
-		<li> Speaker: <a href="slides/Dr%Jeffrey%Hui%-%Profile%-%English%-%2019-04.pdf"> Dr. Jeffrey Hui </a>
-		<li> Title: Igniting the i-Marketing Revolution - 5 KEY Digital and Social Media Trends in 2019+ [<a href="slides/Top%i-Marketing%Trends-Jeffrey-2019%(V2)-HKUST-OP.pdf"> slides </a>]
-	</ul>
 	<ul>[Reference]:
 		<li> [<a href="slides/Lecture06_RNN-LSTM.pdf"> slides </a>] </li>
+	</ul>
+	<ul>[ Topic ]
+		<li> Google Image Recognition. Case study: SenseTime (Computer Vision) [<a href="slides/HKUST%-%AI%in%Finance%-%2019.03.29.pdf"> slides </a>]
 	</ul>
 </td>
 <td>A.W. <br> Y.Y.</td>
