--- a/index.html
+++ b/index.html
@@ -377,13 +377,16 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 </tr>
 
 <td>04/12/2019, Fri</td>
-<td>Lecture 09: An Introduction to Reinforcement Learning </a>  
+<td>Lecture 09: An Introduction to Reinforcement Learning [<a href="slides/Lecture07_Reinforcement.pdf"> YY's slides </a>]  
 	<br>
-	<ul>[Reference]:
-		<li> [<a href="slides/"> slides </a>] </li>
+	<ul>[ Topic ]:
+		<li> Algorithmic Trading with Deep Learning, by DE LAVERGNE Cyril [<a href="slides/"> slides </a>] </li>
+	</ul>
+	<ul>[ Reference ]:
+		<li>  Ceruleanacg's GitHub for <a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> Reinforcement Learning and Supervized Learning Methods and Envs For Quantitative Trading </a> </li>
 	</ul>
 </td>
-<td>A.W. <br> Y.Y.</td>
+<td>Cyril DE LAVERGNE <br> Y.Y.</td>
 <td></td>
 </tr>
 
