--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td>Lecture 09: An Introduction to Reinforcement Learning [<a href="slides/Lecture07_Reinforcement.pdf"> YY's slides </a>]  
 	<br>
 	<ul>[ Topic ]:
-		<li> Algorithmic Trading with Deep Learning, by DE LAVERGNE Cyril [<a href="slides/"> slides </a>] </li>
+		<li> Algorithmic Trading Competition, by DE LAVERGNE Cyril [<a href="slides/Lecture07b_Cyril.pdf"> slides </a>] </li>
 	</ul>
 	<ul>[ Reference ]:
 		<li>  Ceruleanacg's GitHub for <a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> Reinforcement Learning and Supervized Learning Methods and Envs For Quantitative Trading </a> </li>
