--- a/index.html
+++ b/index.html
@@ -380,10 +380,12 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td>Lecture 09: An Introduction to Reinforcement Learning [<a href="slides/Lecture07_Reinforcement.pdf"> YY's slides </a>]  
 	<br>
 	<ul>[ Topic ]:
-		<li> Algorithmic Trading Competition, by DE LAVERGNE Cyril [<a href="slides/Lecture07b_Cyril.pdf"> slides </a>] </li>
+		<li> Competition of Cryptocurrency Trading with Deep Learning, by DE LAVERGNE Cyril [<a href="slides/Lecture07b_Cyril.pdf"> slides </a>] </li>
+		<li> Introduction to Deep Reinforcement Learning Trading, by HUANG Yifei [<a href="slides/Lecture07c_rl_trading.pdf"> slides </a>] </li>
 	</ul>
 	<ul>[ Reference ]:
-		<li>  Ceruleanacg's GitHub for <a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> Reinforcement Learning and Supervized Learning Methods and Envs For Quantitative Trading </a> </li>
+		<li> Cyril's training dataset and demos <a href="https://drive.google.com/drive/folders/1jBqUZgipKoATfdIlbDCTqY5nb7m3ewIw"> link </a>] </li>
+		<li> Ceruleanacg's GitHub Repo for <a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> Reinforcement Learning and Supervized Learning Methods and Envs For Quantitative Trading </a> </li>
 	</ul>
 </td>
 <td>Cyril DE LAVERGNE <br> Y.Y.</td>
