--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 		<li> Introduction to Deep Reinforcement Learning Trading, by HUANG Yifei [<a href="slides/Lecture07c_rl_trading.pdf"> slides </a>] </li>
 	</ul>
 	<ul>[ Reference ]:
-		<li> Cyril's training dataset and demos <a href="https://drive.google.com/drive/folders/1jBqUZgipKoATfdIlbDCTqY5nb7m3ewIw"> link </a>] </li>
+		<li> Cyril's training dataset and demos [<a href="https://drive.google.com/drive/folders/1jBqUZgipKoATfdIlbDCTqY5nb7m3ewIw"> link </a>] </li>
 		<li> Ceruleanacg's GitHub Repo for <a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> Reinforcement Learning and Supervized Learning Methods and Envs For Quantitative Trading </a> </li>
 	</ul>
 </td>
