--- a/index.html
+++ b/index.html
@@ -404,6 +404,26 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 </tr>
 
 <td>05/03/2019, Fri</td>
+<td>Seminar: Investment Trends and FinTech Outlook  </a>  
+	<br>
+	<ul>[ Invited Talk ]:
+		<li> <B> Focus </B>: Sales and Trading Business in Global Investment Banks – Ripe for Disruption by AI?
+		<li> <B> Speaker: </B> Mr. Christopher Lee </li>
+		<li> <B> Biography: </B> 
+			Mr. Chris Lee is a partner at FAA Investments and a board director with expertise in financial markets, risk management, governance and leadership development. Currently, he serves as an Independent Board Member with Matthews Asia Funds (AUM: US$30.2 billion), the largest US investment company with a focus on Asia Pacific markets and Asian Masters Fund, an investment company listed in Australia.
+
+Previously, Chris was an investment banker for 18 years, acting as Managing Director and divisional and regional heads at Deutsche Bank AG, UBS Investment Bank and Bank of America Merrill Lynch. He worked in global capital markets, managed derivative products, and provided equity sales and trading functions to institutional investors.
+
+Academically, Chris is an associate professor of science practice at HKUST and teaches financial mathematics and risk management courses. He completed the AMP at Harvard University and holds a BS in Mechanical Engineering and an MBA from U.C. Berkeley.
+
+<br> Bloomberg Profile: https://www.bloomberg.com/research/stocks/private/person.asp?personId=282763969&privcapId=43605455</li>
+	</ul>
+</td>
+<td>Chris Lee <br> A.W.</td>
+<td></td>
+</tr>
+
+<td>05/10/2019, Fri</td>
 <td>Lecture 11: Tutorial on deep learning in Python </a>  
 	<br>
 	<ul>[Reference]:
