--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ Previously, Chris was an investment banker for 18 years, acting as Managing Dire
 
 Academically, Chris is an associate professor of science practice at HKUST and teaches financial mathematics and risk management courses. He completed the AMP at Harvard University and holds a BS in Mechanical Engineering and an MBA from U.C. Berkeley.
 
-<br> Bloomberg Profile: https://www.bloomberg.com/research/stocks/private/person.asp?personId=282763969&privcapId=43605455</li>
+<br> Bloomberg Profile: [https://www.bloomberg.com/research/stocks/private/person.asp?personId=282763969&privcapId=43605455](link"Bloomberg Profile")</li>
 	</ul>
 </td>
 <td>Chris Lee <br> A.W.</td>
