--- a/index.html
+++ b/index.html
@@ -427,10 +427,22 @@ Academically, Chris is an associate professor of science practice at HKUST and t
 <td>Lecture 12: Tutorial on deep learning in Python </a>  
 	<br>
 	<ul>[Reference]:
-		<li> [<a href="slides/"> slides </a>] </li>
+		<li> [<a href="slides/Tutorial2-MAFS6010U.ipynb"> Python Notebook </a>] </li>
 	</ul>
 </td>
 <td>Yifei Huang</td>
+<td></td>
+</tr>
+
+
+<td>05/17/2019, Fri</td>
+<td>Lecture 13: Final </a>  
+	<br>
+	<ul>[Reference]:
+		<li> [<a href="slides/"> slides </a>] </li>
+	</ul>
+</td>
+<td>A.W.</td>
 <td></td>
 </tr>
 	<!---
