--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@ Alex has a PhD from Northwestern University and a BA in Mathematics from Peking 
 <td>Lecture 10: An Introduction to Unsupervised Learning: PCA, AutoEncoder, VAE, and GANs </a>  
 	<br>
 	<ul>[Reference]:
-		<li> [<a href="slides/Lecture08_Generative.pdf"> slides </a>] </li>
+		<li> [<a href="slides/Lecture08_Generative.pdf"> YY's slides </a>] </li> 
+		<li> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.04.26.pdf"> AW's slides </a>] </li>
 	</ul>
 </td>
 <td>A.W. <br> Y.Y.</td>
@@ -439,7 +440,7 @@ Academically, Chris is an associate professor of science practice at HKUST and t
 <td>Lecture 13: Final </a>  
 	<br>
 	<ul>[Reference]:
-		<li> [<a href="slides/"> slides </a>] </li>
+		<li> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.05.17.pdf"> slides </a>] </li>
 	</ul>
 </td>
 <td>A.W.</td>
