--- a/index.html
+++ b/index.html
@@ -442,6 +442,9 @@ Academically, Chris is an associate professor of science practice at HKUST and t
 	<ul>[Reference]:
 		<li> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.05.17.pdf"> slides </a>] </li>
 	</ul>
+<ul> [ Option A Reports ]:
+	<li> PAN, Jiayi. [<a href="https://hkustconnect-my.sharepoint.com/:u:/g/personal/jpanak_connect_ust_hk/EZJurUYLdBFDi8f1OkoBojUBpP9FChhzdE9MG3CiaUTSpw?e=6pZ90x"> One Drive Link: Submission_LSTM_PJY.zip </a>][<a href="https://youtu.be/ufY7f8fc5hU"> Presentation </a>]</li>
+</ul>
 </td>
 <td>A.W.</td>
 <td></td>
