--- a/index.html
+++ b/index.html
@@ -442,7 +442,10 @@ Academically, Chris is an associate professor of science practice at HKUST and t
 	<ul>[Reference]:
 		<li> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.05.17.pdf"> slides </a>] </li>
 	</ul>
-<ul> [ Option A Reports ]:
+<ul> [ Final Reports ]:
+	<li> Ruiting CHEN, Di CHENG, Yang XUE, Yifan YE, Mengkai ZHANG. (Group Hawk) [<a href="https://youtu.be/dnuZeVYy988"> Presentation </a>][<a href="https://github.com/gigondor/HKUST-MAFS-6010U-HAWK"> GitHub </a>]</li>
+	<li> LI, Zhuxuan and HE, Yuhang. Analysis on Codecademy - A company focusing on providing online AI related education. [<a href=""> Report </a>][<a href=""> Slides </a>][<a href="https://youtu.be/rum4qau7jW8"> Presentation </a>]</li>
+	<li> SHEN, Lue. Building Chinese Chat Bot with Controlled Sentence Function. [<a href=""> Report </a>] [<a href=""> Slides </a>] [<a href="https://drive.google.com/file/d/1LrszFVHk9XxY_u2xnA0hSLmQz1DacL41/view?usp=sharing"> Presentation (Google Drive) </a>] [<a href="https://youtu.be/OL8BFajM2K4"> Presentation (youtube)</a>] </li>
 	<li> PAN, Jiayi. [<a href="https://hkustconnect-my.sharepoint.com/:u:/g/personal/jpanak_connect_ust_hk/EZJurUYLdBFDi8f1OkoBojUBpP9FChhzdE9MG3CiaUTSpw?e=6pZ90x"> One Drive Link: Submission_LSTM_PJY.zip </a>][<a href="https://youtu.be/ufY7f8fc5hU"> Presentation </a>]</li>
 </ul>
 </td>
