--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@ Academically, Chris is an associate professor of science practice at HKUST and t
 	<br>
 	<ul>[Reference]:
 		<li> [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202019.05.17.pdf"> slides </a>] </li>
+		<li> [<a href="project/[FinalAssignment.pdf]"> Final Assignment </a>] </li>
 	</ul>
 <ul> [ Final Reports ]:
 	<li> Ruiting CHEN, Di CHENG, Yang XUE, Yifan YE, Mengkai ZHANG (Group Hawk). AI in Finance Final Report. [<a href="project/Hawk_report.pdf"> Report </a>][<a href="project/Hawk_slides.pptx"> Slides (pptx) </a>][<a href="https://youtu.be/dnuZeVYy988"> Presentation </a>][<a href="https://github.com/gigondor/HKUST-MAFS-6010U-HAWK"> GitHub </a>]</li>
