--- a/index.html
+++ b/index.html
@@ -210,17 +210,11 @@ Find our class page at: <a href="https://piazza.com/ust.hk/spring2020/mafs6010u/
 	</p>
 
 
-<h3>Homework and Projects:</h3>
-
-<p style="margin-left: 0.5in;">
-<big><em> TBA (To Be Announced) </em>
-</big></p>
-
 <h3>Teaching Assistant:</h3>
 
 <p style="margin-left: 0.5in;">
 <big> <br>
-Email: Mr. CAO, He < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em> >
+Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em> >
 </big>
 </p>
 	
