--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Find our class page at: <a href="https://piazza.com/ust.hk/spring2020/mafs6010u/
 
 	<big>
 
-		<em> <a href="http://www-bcf.usc.edu/~gareth/ISL/">An Introduction to Statistical Learning, with applications in R (ISLR).</a> By James, Witten, Hastie, and Tibshirani </em>
+		<em> <a href="https://www.statlearning.com/"> An Introduction to Statistical Learning, with applications in R and Python.</a> By James, Witten, Hastie, and Tibshirani </em>
 
 	</big>
 
@@ -262,10 +262,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<ul>[ Guest Talk ]
 		<li> Title: An Overview of Quant Modeling and Trading: Theory and Practice [<a href="slides/Lecture01_quant_AI_overview_ust.pdf"> slides </a>] </li>
 		<li> Speaker: Prof. <a href="https://mikezhang.com"> Michael Zhang</a>, CUHK </li>
-		<li> Bio: Professor Michael Zhang is a Chair Professor of Decision Sciences and Managerial Economics at the Chinese University of Hong Kong. 
-			He serves as the Associate Dean of Innovation and Impact, Co-Executive Director of Asia Pacific Institute of Business, Co-Director of 
-			Hong Kong-Shenzhen Finance Research Centre at the CUHK Business School. Externally, he is also affiliated with MIT Initiative on Digital Economy, 
-			Guanghua School of Management of Peking University and Leibniz Centre for European Economic Research (ZEW).
+		<li> Bio: Professor Michael Zhang is the Irwin and Joan Jacobs Chair Professor at the School of Economics and Management, Tsinghua University. 
+		He was previously at the Chinese University of Hong Kong, where he served as the Associate Dean of Innovation and Impact, Co-Executive Director 
+		of Asia Pacific Institute of Business, Co-Director of Hong Kong-Shenzhen Finance Research Centre at the CUHK Business School. Externally, he is also 
+		affiliated with MIT Initiative on Digital Economy and Leibniz Centre for European Economic Research (ZEW).
 			
                      He has a PhD in Management from MIT Sloan School of Management, an MSc in Management, a BE in Computer Science and a BA in English 
 		from Tsinghua University. Before joining the academia, he worked as an analyst for an investment bank, and as an international marketing manager 
