--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Find our class page at: <a href="https://piazza.com/ust.hk/spring2020/mafs6010u/
 
 	<big>
 
-		<em> <a href="https://www.statlearning.com/"> An Introduction to Statistical Learning, with applications in R and Python.</a> By James, Witten, Hastie, and Tibshirani </em>
+		<em> <a href="https://www.statlearning.com/"> An Introduction to Statistical Learning, with applications in R / Python.</a> By James, Witten, Hastie, and Tibshirani </em>
 
 	</big>
 
