--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 
 <tr>
 <td>23/09/2021, Thu </td>
-<td>Lecture 04: Decision Tree, Bagging, Random Forests and Boosting <a href="slides/Lecture04_tree.pdf">[ YY's slides ]</a> 
+<td>Lecture 04: Decision Tree, Bagging, Random Forests and Boosting <a href="slides/Lecture04_tree.pdf">[ slides ]</a> 
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
@@ -322,7 +322,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 
 <tr>
 <td>30/09/2021, Thu</td>
-<td>Lecture 05: Support Vector Machines <a href="slides/Lecture05_svm.pdf">[ YY's slides ]</a> 
+<td>Lecture 05: Support Vector Machines <a href="slides/Lecture05_svm.pdf">[ slides ]</a> 
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
