--- a/index.html
+++ b/index.html
@@ -313,6 +313,14 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 			<a href="notebook/MAFS6010_tree.ipynb"> [ MAFS6010_tree.ipynb ] </a> </li> 
 	</li>
 	</ul>
+		
+	<ul>[Reading Material]:
+	<li> <B>Shihao Gu, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"Empirical Asset Pricing via Machine Learning"</B>, Review of Financial Studies, Vol. 33, Issue 5, (2020), 2223-2273. Winner of the 2018 Swiss Finance Institute Outstanding Paper Award.
+	 	<br> 
+		[<a href="https://dachxiu.chicagobooth.edu/download/ML.pdf"> link </a>]
+	</li>	
+	</ul>
 </td>
 <td>Y.Y.</td>
 <td></td>
