--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
 		<li> LeNet5 for MNIST dataset in Pytorch Notebook 
-			[<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/notebook/LeNet5_mnist.ipynb"> LeNet5_mnist.ipynb </a>] </li>
+			[<a href="notebook/LeNet5_mnist.ipynb"> LeNet5_mnist.ipynb </a>] </li>
 		<li> LeNet5 for Cifar10 dataset in Pytorch Notebook 
-			[<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/notebook/LeNet5_cifar10.ipynb"> LeNet5_cifar10.ipynb </a>] </li>
+			[<a href="notebook/LeNet5_cifar10.ipynb"> LeNet5_cifar10.ipynb </a>] </li>
 		<li> AlexNet for Cifar10 dataset in Pytorch Notebook 
-			[<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/notebook/AlexNet_cifar10.ipynb"> AlexNet_cifar10.ipynb </a>] </li>
+			[<a href="notebook/AlexNet_cifar10.ipynb"> AlexNet_cifar10.ipynb </a>] </li>
 		<li> ResNet for Cifar10 dataset in Pytorch Notebook 
-			[<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/notebook/ResNet_cifar10.ipynb"> ResNet_cifar10.ipynb </a>] </li>
+			[<a href="notebook/ResNet_cifar10.ipynb"> ResNet_cifar10.ipynb </a>] </li>
 
 	</ul>
 
