--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 
 
 <td>09/10/2021, Mon</td>
-<td>Lecture 05: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture06_CNN.pdf"> YY's slides </a>] </a>  
+<td>Lecture 05: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture06_CNN.pdf"> slides </a>]   
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
@@ -357,7 +357,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	</ul>
 
 	<ul>[ Topics on CNNs ]:
-		<li> Visualizing CNNs [<a href="slides/Lecture07_CNN2.pdf"> YY's slides </a>] </li>
+		<li> Visualizing CNNs [<a href="slides/Lecture07_CNN2.pdf"> slides </a>] </li>
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
 		<li> Visualization of VGG16 in Pytorch Notebook 
 			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/vgg16-visualization.ipynb"> vgg16-visualization.ipynb </a>] </li>
@@ -371,6 +371,65 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/LeNet5_mnist_fgsm.ipynb"> LeNet5_mnist_fgsm.ipynb </a>] </li>
 	</ul>
 	
+
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
+<td>09/10/2021, Mon</td>
+<td>Lecture 06: Topics on CNN: Neural Style and Adversarial Examples [<a href="slides/Lecture07_CNN+.pdf"> slides </a>] and Support Vector Machines [<a href="slides/Lecture05_svm.pdf"> slides </a>]   
+	<br>
+	<ul>[ Topics on CNNs ]:
+		<li> Visualizing CNNs [<a href="slides/Lecture07_CNN2.pdf"> YY's slides </a>] </li>
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Visualization of VGG16 in Pytorch Notebook 
+			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/vgg16-visualization.ipynb"> vgg16-visualization.ipynb </a>] </li>
+		<li> Class activation heatmap of VGG16 in Pytorch Notebook 
+			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/vgg16-heatmap.ipynb"> vgg16-heatmap.ipynb </a>] </li>
+		<li> Fine-tuning (transfer learning) of ResNet in Pytorch Notebook 
+			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/finetuning_resnet.ipynb"> finetuning_resnet.ipynb </a>] </li>
+		<li> Neural Style of HKUST at Starry Night in Pytorch Notebook 
+			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/neural_style_starry-hkust.ipynb"> neural_style_starry-hkust.ipynb </a>] </li>
+		<li> Adversarial examples of LeNet5 with MNIST 
+			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/LeNet5_mnist_fgsm.ipynb"> LeNet5_mnist_fgsm.ipynb </a>] </li>
+	</ul>
+	<br>
+	<ul>[Reference]:
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Python Notebook for Support Vector Machines 
+			<a href="notebook/MAFS6010_svm.ipynb"> [ MAFS6010_svm.ipynb ] </a> </li> 
+	</li>
+	</ul>
+
+	<br>		
+	<ul>[ Project 2 ]
+		<li> Project description: paper replication study [<a href="project2/project2.pdf"> pdf </a>] </li>
+
+		
+	<li> <B>Shihao Gu, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"Empirical Asset Pricing via Machine Learning"</B>, Review of Financial Studies, Vol. 33, Issue 5, (2020), 2223-2273. Winner of the 2018 Swiss Finance Institute Outstanding Paper Award.
+	 	<br> 
+		[<a href="https://dachxiu.chicagobooth.edu/download/ML.pdf"> link </a>]
+	<p>
+	</li>	
+	
+	<li> <B>Jingwen Jiang, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"(Re-)Imag(in)ing Price Trends"</B>, Chicago Booth Report, Aug 2021
+	 	<br> 
+		[<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3756587"> link </a>]
+	<p>
+	</li>	
+	
+		<!---
+		<li> GitHub Repository for reports of Project 1
+		<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/project1//"> [ GitHub ] </a>
+		<p>
+		</li>	
+		--->
+		
+	</ul>
+
 
 </td>
 <td>Y.Y.</td>
