--- a/index.html
+++ b/index.html
@@ -394,15 +394,15 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		<li> Adversarial examples of LeNet5 with MNIST 
 			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/LeNet5_mnist_fgsm.ipynb"> LeNet5_mnist_fgsm.ipynb </a>] </li>
 	</ul>
-	<br>
-	<ul>[Reference]:
+
+	<ul>[ SVM ]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
 		<li> Python Notebook for Support Vector Machines 
 			<a href="notebook/MAFS6010_svm.ipynb"> [ MAFS6010_svm.ipynb ] </a> </li> 
 	</li>
 	</ul>
 
-	<br>		
+	
 	<ul>[ Project 2 ]
 		<li> Project description: paper replication study [<a href="project2/project2.pdf"> pdf </a>] </li>
 
