--- a/index.html
+++ b/index.html
@@ -405,8 +405,9 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	
 	<ul>[ Project 2 ]
 		<li> Project description: paper replication study [<a href="project2/project2.pdf"> pdf </a>] </li>
-
-		
+		<li> Asset Pricing paper replication [<a href="project2/replicate1_Xiu_Asset_Pricing.pdf"> pdf </a>] </li>
+		<li> Reimaging paper replication [<a href="project2/replicate2_Xiu_Reimage.pdf"> pdf </a>] </li>
+	<br>	
 	<li> <B>Shihao Gu, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
 		<br> <B>"Empirical Asset Pricing via Machine Learning"</B>, Review of Financial Studies, Vol. 33, Issue 5, (2020), 2223-2273. Winner of the 2018 Swiss Finance Institute Outstanding Paper Award.
 	 	<br> 
