--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		
 		<!---
 		<li> GitHub Repository for reports of Project 1
-		<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/project1//"> [ GitHub ] </a>
+		<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project1//"> [ GitHub ] </a>
 		<p>
 		</li>	
 		--->
@@ -424,7 +424,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	
 		<!---
 		<li> GitHub Repository for reports of Project 1
-		<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/project1//"> [ GitHub ] </a>
+		<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2023/project1//"> [ GitHub ] </a>
 		<p>
 		</li>	
 		--->
@@ -432,6 +432,47 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	</ul>
 
 
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
+<tr>
+<td>30/10/2023, Mon</td>
+<td>Lecture 07: An Introduction to Recurrent Neural Networks (RNN) and Long Short Term Memory (LSTM) [<a href="slides/Lecture08_RNN-LSTM.pdf"> slides </a>] </a>  
+	<br>
+	<ul>[Reference]:
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Character-level RNN, LSTM and GRU for Name Classification 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/char_rnn_classification_tutorial.ipynb"> char_rnn_classification_tutorial.ipynb </a>] 
+		</li>
+		<!---
+		<li> Generating Shakespeare's Sonnet: RNN vs. LSTM
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/lstm_rnn_shakespeare.ipynb"> lstm_rnn_shakespeare.ipynb </a>] 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>]
+		</li>
+		--->
+		<li> Generating Shakespeare's Sonnet: RNN, LSTM, Bidirectional LSTM, and Momentum-LSTM
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_BiLSTM_mlstm_shakespeare.ipynb"> rnn_lstm_BiLSTM_mlstm_shakespeare.ipynb </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_biLSTM_shakespeare.ipynb"> rnn_lstm_biLSTM_shakespeare.ipynb </a>] 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>]
+		</li>
+		<li> RNN for generating Shakespeare's Sonnet 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn.ipynb"> rnn.ipynb </a>] 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>] 
+		</li> 
+		<li> LSTM for generating Shakespeare's Sonnet 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_shakespeare.ipynb"> rnn_lstm_shakespeare.ipynb </a>] 
+		</li>	
+		<li> Bidirectional RNN for MNIST in pytorch
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/bidirection_lstm_mnist.ipynb"> bidirection_lstm_mnist.ipynb </a>] 
+		[<a href="https://www.youtube.com/watch?v=jGst43P-TJA"> Youtube </a>]
+		</li>	
+		<p>
+		<li> Jorgen Schmidhuber: [<a href="https://people.idsia.ch/~juergen/deep-learning-miraculous-year-1990-1991.html"> Deep Learning: Our Miraculous Year 1990-1991
+ </a>] [<a href="https://people.idsia.ch/~juergen/critique-honda-prize-hinton.html"> Critique of Honda Prize for Dr. Hinton </a>]
+		</li>	  
+	</ul>
 </td>
 <td>Y.Y.</td>
 <td></td>
