--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
-<td>04/11/2021, Thu</td>
-<td>Lecture 09: Attention, Transformer, GPT, and BERT [<a href="slides/Lecture09_transformer.pdf"> slides </a>]  </a>  
+<td>06/11/2021, Mon</td>
+<td>Lecture 08: Attention, Transformer, GPT, and BERT [<a href="slides/Lecture09_transformer.pdf"> slides </a>]  </a>  
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
@@ -505,6 +505,20 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		<li> Chinese BERT (Whole-Word-Masking): [<a href="https://github.com/ymcui/Chinese-BERT-wwm"> link </a>]
 		</li>
 	</ul>
+	<ul>[ Presentation ]
+		<li> 1. <B> XUE Wenjing, CHEN Hongxi, DING Guobin, QIAO Guan</B> [<I> Best Report </I>]<img src="../../images/new.jpg" height="40">
+	 	<br> 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_overall_Project1 [XUE Wenjing-CHEN Hongxi-DING Guobin-QIAO Guan].pdf"> report (pdf) </a>]
+	<p>
+	</li>
+		<li> 2. <B> Aoran LI, Tianying ZHOU, Langting WENG, Yijia MA </B> [<I> Best Technique Report </I>]<img src="../../images/new.jpg" height="40">
+	 	<br> 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_tech_MAFS 6010Z_Project1_[Aoran Li, Tianying Zhou, Langting Weng, Yijia Ma]"> report (pptx) </a>]
+	<p>
+	</li>
+
+	</ul>
+
 </td>
 <td>Y.Y.</td>
 <td></td>
